# algo-trader

./: .gitignore  pyproject.toml  sandbox.ipynb
algo-trader/: SymbolProcessor.py  TraderLab.py  backtest.py  data_fetch.py  preprocess.py  run_experiment.py  stream_data.py  stream_data_mp.py  stream_data_v2.py  test.ipynb  train.py
algo-trader/experiment_configs/: xgb_100_1m_v1.json  xgb_100_5m_v1.json
